examples/test/testpolicy3286.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3286
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key36: value2
      key12: value35
      key13: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value31
          key42: value22
          key23: value1
      podSelector:
        matchLabels:
          key8: value9
          key17: value40
          key12: value0
